Solve overflow on campaign alerts page

--- a/app/assets/stylesheets/modules/_tables.styl
+++ b/app/assets/stylesheets/modules/_tables.styl
@@ -17,6 +17,12 @@
       th
         width 20%
 
+.campaign_main.alerts td
+  max-width 400px
+  overflow hidden
+  padding 12px
+  text-overflow ellipsis
+
 .table
   width 100%
   border-collapse separate
